k8s/03-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: sunotal-user-app
  namespace: sunotal
  labels:
    app: sunotal-user-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: sunotal-user-app
---
apiVersion: v1
kind: Service
metadata:
  name: sunotal-admin-app
  namespace: sunotal
  labels:
    app: sunotal-admin-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: sunotal-admin-app
---
apiVersion: v1
kind: Service
metadata:
  name: sunotal-vendor-app
  namespace: sunotal
  labels:
    app: sunotal-vendor-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: sunotal-vendor-app
---
apiVersion: v1
kind: Service
metadata:
  name: sunotal-delivery-app
  namespace: sunotal
  labels:
    app: sunotal-delivery-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: sunotal-delivery-app
---
apiVersion: v1
kind: Service
metadata:
  name: sunotal-support-app
  namespace: sunotal
  labels:
    app: sunotal-support-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: sunotal-support-app
---
apiVersion: v1
kind: Service
metadata:
  name: sunotal-auth
  namespace: sunotal
  labels:
    app: sunotal-auth
spec:
  type: ClusterIP
  ports:
    - port: 5001
      targetPort: 5001
      protocol: TCP
      name: http
  selector:
    app: sunotal-auth
---
apiVersion: v1
kind: Service
metadata:
  name: sunotal-operations
  namespace: sunotal
  labels:
    app: sunotal-operations
spec:
  type: ClusterIP
  ports:
    - port: 5002
      targetPort: 5002
      protocol: TCP
      name: http
  selector:
    app: sunotal-operations
---
apiVersion: v1
kind: Service
metadata:
  name: sunotal-inventory
  namespace: sunotal
  labels:
    app: sunotal-inventory
spec:
  type: ClusterIP
  ports:
    - port: 5003
      targetPort: 5003
      protocol: TCP
      name: http
  selector:
    app: sunotal-inventory
---
apiVersion: v1
kind: Service
metadata:
  name: sunotal-user
  namespace: sunotal
  labels:
    app: sunotal-user
spec:
  type: ClusterIP
  ports:
    - port: 5004
      targetPort: 5004
      protocol: TCP
      name: http
  selector:
    app: sunotal-user
---
apiVersion: v1
kind: Service
metadata:
  name: sunotal-delivery
  namespace: sunotal
  labels:
    app: sunotal-delivery
spec:
  type: ClusterIP
  ports:
    - port: 5006
      targetPort: 5006
      protocol: TCP
      name: http
  selector:
    app: sunotal-delivery
---
apiVersion: v1
kind: Service
metadata:
  name: sunotal-support
  namespace: sunotal
  labels:
    app: sunotal-support
spec:
  type: ClusterIP
  ports:
    - port: 5007
      targetPort: 5007
      protocol: TCP
      name: http
  selector:
    app: sunotal-support
